# concentray

./: .gitignore  LICENSE  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: quality.yml
.tmp-web-export-test/: index.html
apps/cli/: .env.example  README.md  pyproject.toml
apps/cli/src/concentray_cli/: cli_app.py  context.py  env.py  installers.py  local_api_server.py  main.py  models.py  output.py  parsing.py  paths.py  provider_factory.py  runtime_support.py  workspace_store.py
apps/cli/src/concentray_cli/commands/: __init__.py  activity.py  agent.py  comment.py  context.py  note.py  runtime.py  skill.py  task.py  workspace.py
apps/cli/src/concentray_cli/providers/: base.py  local_json.py
apps/cli/src/concentray_cli/skills/: runner.py  skills.yaml
apps/cli/tests/: test_cli.py  test_local_api_server.py  test_local_json_provider.py  test_models.py  test_openclaw_wrapper.py  test_parsing.py  test_provider_factory.py  test_skill_runner.py  test_workspace_store.py
apps/client/: .env.example  App.tsx  README.md  app.json  package.json  tsconfig.json
apps/client/src/: BlockerCard.test.tsx  BlockerCard.tsx  (+4 more)
openclaw/: SKILL.md
openclaw/examples/: smoke.sh
openclaw/plugin/: index.js  openclaw.plugin.json  package.json
openclaw/plugin_tools/: invoke_tool.py  manifest.json  run_tool.sh
openclaw/policy/: allowlist.toml
openclaw/profiles/: default-agent.toml
scripts/: concentray  ctray
scripts/bootstrap/: bootstrap_all.sh  bootstrap_openclaw.sh
skills/concentray-task-operator/: SKILL.md
(+42 files in other folders)
